--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <header class="large-header block-container">
                 <div class="outer" style="background-color: #8C2633;">
                     <div class="middle">
-                        <div class="inner inset-shadow" style="background-color: #8C2633;">
+                        <div class="inner" style="background-color: #8C2633;">
                             <div style="line-height: 2.75rem;">
                                 <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
                                 <h1 style="font-size: 2rem;"><span> Clinical &amp; Forensic
@@ -112,7 +112,7 @@
                     <div class="middle">
                         <div class="inner" style="background-color: #8c2633;">
                             <div>
-                                <h1 style="font-size: 3rem;"><span class="inset-shadow">Adrienne C. Davis, Ph.D. ABPP</span></h1>
+                                <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
                                 <img class="secondary-photo" src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
                                     alt="Dr. Adrienne Davis" />
                             </div>
@@ -178,7 +178,7 @@
                     <div class="middle">
                         <div class="inner" style="background-color: #8C2633;">
                             <div>
-                                <h1 style="font-size: 3rem;"><span class="inset-shadow">Adrienne C. Davis, Ph.D. ABPP</span></h1>
+                                <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
                                 <!--
                                 <img class="secondary-photo" src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
                                     alt="Dr. Adrienne Davis" />
@@ -271,7 +271,7 @@
                     <div class="middle">
                         <div class="inner" style="background-color: #8C2633;">
                             <div>
-                                <h1 style="font-size: 3rem;"><span class="inset-shadow">Adrienne C. Davis, Ph.D. ABPP</span></h1>
+                                <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
                                 <!--
                                 <img class="secondary-photo" src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
                                     alt="Dr. Adrienne Davis" />
@@ -367,7 +367,7 @@
                     <div class="middle">
                         <div class="inner" style="background-color: #8C2633;">
                             <div>
-                                <h1 style="font-size: 3rem;"><span class="inset-shadow">Adrienne C. Davis, Ph.D. ABPP</span></h1>
+                                <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
                                 <!--
                                 <img class="secondary-photo" src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
                                     alt="Dr. Adrienne Davis" />
@@ -484,7 +484,7 @@
                     <div class="middle">
                         <div class="inner" style="background-color: #8C2633;">
                             <div>
-                                <h1 style="font-size: 3rem;"><span class="inset-shadow">Adrienne C. Davis, Ph.D. ABPP</span></h1>
+                                <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
                                 <!--
                                 <img class="secondary-photo" src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
                                     alt="Dr. Adrienne Davis" />
@@ -548,7 +548,7 @@
                     <div class="middle">
                         <div class="inner" style="background-color: #8C2633;">
                             <div>
-                                <h1 style="font-size: 3rem;"><span class="inset-shadow">Adrienne C. Davis, Ph.D. ABPP</span></h1>
+                                <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
                                 <!--
                                 <img class="secondary-photo" src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
                                     alt="Dr. Adrienne Davis" />
@@ -722,13 +722,14 @@
             </div>
         </section>
 
-        <div id="calendar-clock" class="clock-container block-container inset-shadow">
+        <div id="calendar-clock" class="clock-container block-container">
             <h2 id="date_time">Clock</h2>
         </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2015702/datetime.js"></script>
+    <script src="./resources/scripts/browserdetect.js"></script>
 
     <script>
         window.onload = date_time('date_time');
@@ -756,49 +757,6 @@
         }
         // Get the element with id="defaultOpen" and click on it
         document.getElementById("defaultOpen").click();
-    </script>
-
-    <script>
-        // Get IE or Edge browser version
-        var version = detectIE();
-
-        if (version === false) {
-            document.getElementById("result").innerHTML = "<s>IE/Edge</s>";
-            document.getElementById("result").classList.add("inset-shadow");
-        } else {
-            document.getElementById("result").classList.remove("inset-shadow");
-        }
-
-        /**
-         * detect IE
-         * returns version of IE or false, if browser is not Internet Explorer
-         */
-
-        function detectIE() {
-            var ua = window.navigator.userAgent;
-
-
-            var msie = ua.indexOf("MSIE ");
-            if (msie > 0) {
-                // IE 10 or older => return version number
-                return parseInt(ua.substring(msie + 5, ua.indexOf(".", msie)), 10);
-            }
-
-            var trident = ua.indexOf("Trident/");
-            if (trident > 0) {
-                // IE 11 => return version number
-                var rv = ua.indexOf("rv:");
-                return parseInt(ua.substring(rv + 3, ua.indexOf(".", rv)), 10);
-            }
-
-            var edge = ua.indexOf("Edge/");
-            if (edge > 0) {
-                // Edge (IE 12+) => return version number
-                return parseInt(ua.substring(edge + 5, ua.indexOf(".", edge)), 10);
-            }
-            // other browser
-            return false;
-        }
     </script>
 
     <div id="diffuser"></div>
