--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style.css" />
+    <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon">
 </head>
 
 <body>
