Updated external content
Added favicons and browser specific styling to the external content pages.

--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=Curriculum Vitae, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Curriculum Vitae</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style-dist.css" />
-
+    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style.css" />
+    <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon">
 </head>
 
 <body>
@@ -17,6 +17,7 @@
             <embed src="./resources/content/Curriculum-Vitae.pdf" type="application/pdf" height="1100" width="800">
         </div>
     </section>
+    <script src="./resources/scripts/browserdetect.js"></script>
 </body>
 
 </html>
