--- a/forensic-psychology.html
+++ b/forensic-psychology.html
@@ -7,10 +7,12 @@
     <title>Forensic Psychology</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style.css" />
+    <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon">
     <style>
         section>div {
             margin-top: 100px;
         }
+
         img {
             display: block;
             width: 300px;
@@ -23,11 +25,11 @@
 
 <body style="background: Black;">
     <header class="small-header block-container" style="margin-top: 0; width: 100%;">
-        <div class="outer" style="background-color: #8C2633;">
+        <div class="outer" style="background-color: #8c2633">
             <div class="middle">
-                <div class="inner" style="background-color: #8C2633;">
+                <div class="inner">
                     <div>
-                        <h1 style="font-size: 3rem;"><span class="inset-shadow">Adrienne C. Davis, Ph.D. ABPP</span></h1>
+                        <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
                         <!--
                         <img class="secondary-photo" src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
                             alt="Dr. Adrienne Davis" />
@@ -95,6 +97,8 @@
 
         </div>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./resources/scripts/browserdetect.js"></script>
 </body>
 
 </html>
