--- a/solution-focused-counseling.html
+++ b/solution-focused-counseling.html
@@ -8,6 +8,7 @@
     <title>One and You're Done</title>
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style.css" />
+    <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon">
     <style>
         section {
             font-family: "Comic Sans MS", "Architects Daughter";
@@ -44,7 +45,7 @@
             <div class="middle">
                 <div class="inner" style="background-color: #8C2633;">
                     <div>
-                        <h1 style="font-size: 3rem;"><span class="inset-shadow">Adrienne C. Davis, Ph.D. ABPP</span></h1>
+                        <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
                         <!--
                         <img class="secondary-photo" src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
                             alt="Dr. Adrienne Davis" />
@@ -112,6 +113,7 @@
             </p>
         </div>
     </section>
+    <script src="./resources/scripts/browserdetect.js"></script>
 </body>
 
 </html>
