--- a/college-readiness.html
+++ b/college-readiness.html
@@ -7,6 +7,7 @@
     <title>College Readiness</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style.css" />
+    <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon">
 </head>
 
 <body style="background: Black;">
@@ -15,7 +16,7 @@
             <div class="middle">
                 <div class="inner" style="background-color: #8C2633;">
                     <div>
-                        <h1 style="font-size: 3rem;"><span class="inset-shadow">Adrienne C. Davis, Ph.D. ABPP</span></h1>
+                        <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
                         <!--
                         <img class="secondary-photo" src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
                             alt="Dr. Adrienne Davis" />
@@ -69,6 +70,7 @@
             </div>
         </div>
     </section>
+    <script src="./resources/scripts/browserdetect.js"></script>
 </body>
 
 </html>
