--- a/juvenile-justice.html
+++ b/juvenile-justice.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style.css" />
+    <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon">
 </head>
 
 <body style="background: Black;">
@@ -16,7 +17,7 @@
             <div class="middle">
                 <div class="inner" style="background-color: #8C2633;">
                     <div>
-                        <h1 style="font-size: 3rem;"><span class="inset-shadow">Adrienne C. Davis, Ph.D. ABPP</span></h1>
+                        <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
                         <!--
                         <img class="secondary-photo" src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
                             alt="Dr. Adrienne Davis" />
@@ -65,7 +66,7 @@
         </div>
 
     </section>
-
+    <script src="./resources/scripts/browserdetect.js"></script>
 </body>
 
 </html>
