Added a smaller version of the slideshow

--- a/index.html
+++ b/index.html
@@ -57,9 +57,12 @@
             <div id="home-content-container">
                 <div id="slideshow">
                     <video autoplay loop muted preload style="width: auto; height: 245px;">
+                        <source id="mp4" src="./resources/media/video/small-sideshow.mp4" type="video/mp4">
+                        <!--
                         <source id="mp4" src="./resources/media/video/slideshow.mp4" type="video/mp4">
                         <source id="mp4" src="./resources/media/video/slideshow.webm" type="video/webm">
                         <source id="mp4" src="./resources/media/video/slideshow.ogv" type="video/ogg">
+                            -->
                         Your user agent does not support the HTML 5 video element
                     </video>
 
