--- a/juvenile-justice.html
+++ b/juvenile-justice.html
@@ -7,7 +7,7 @@
     <title>Juvenile Justice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style-dist.css" />
     <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon">
 </head>
 
