I missed some files

--- a/juvenile-justice.html
+++ b/juvenile-justice.html
@@ -31,7 +31,7 @@
     <section id="juvenile-detention" style="padding: 4rem; background-color: #f1e6b2;">
         <h2 style="display: none;">How to keep your child out of the juvenile justice system</h2>
         <div style="font-family: 'Comic Sans MS', 'Architects Daughter', sans-serif; z-index:10; margin-top: 100px;">
-            <img src="./resources/media/images/child-behind-bars-with-background-removed.png" width="400px" alt="A juvenile peers through bars"
+            <img src="./resources/media/images/child-behind-bars-with-background-removed.png" width="400" alt="A juvenile peers through bars"
                 style="display: block; margin-left: auto; margin-right: auto;" />
             <h3 style="font-size: 1.5rem; text-align: center; margin-top: 1rem; margin-bottom: 1rem;">How to Keep Your
                 Child Out Of the Juvenile Justice
