--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="This site contains information about Georgia-based clinical and forensic psychologist Dr. Adrienne C Davis." />
-    <meta name="keywords" content="Psychologist, clinical, forensic, certified, criminal, depression, anxiety, delinquency, Psychotherapy, Adolescents, Women, Minorities, licensed, California, Georgia" />
+    <meta name="keywords" content="Psychologist, clinical, forensic, Augusta, criminal, depression, anxiety, delinquency, Psychotherapy, Adolescents, Women, Minorities, Evans, California, Georgia" />
     <meta name="format-detection" content="telephone=no">
     <meta name="author" content="Edgar M. Cole, Jr." />
     <title>Adrienne C Davis, PhD</title>
@@ -57,9 +57,9 @@
             <div id="home-content-container">
                 <div id="slideshow">
                     <video autoplay loop muted preload style="width: auto; height: 245px;">
-                        <source id="mp4" src="./resources/media/video/slideshow.mp4" type="video/mp4">
-                        <source id="mp4" src="./resources/media/video/slideshow.webm" type="video/webm">
-                        <source id="mp4" src="./resources/media/video/slideshow.ogv" type="video/ogg">
+                        <source src="./resources/media/video/slideshow.mp4" type="video/mp4">
+                        <source src="./resources/media/video/slideshow.webm" type="video/webm">
+                        <source src="./resources/media/video/slideshow.ogv" type="video/ogg">
                         Your user agent does not support the HTML 5 video element
                     </video>
 
