Reverted to the development stylesheet
Switched from the production stylesheet to the development stylesheet in preparation for the merge.

--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=Curriculum Vitae, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Curriculum Vitae</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style-dist.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style.css" />
     <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon">
 </head>
 
