--- a/presentations.html
+++ b/presentations.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Presentations</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style-dist.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style.css" />
     <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon">
 </head>
 
