--- a/solution-focused-counseling.html
+++ b/solution-focused-counseling.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>One and You're Done</title>
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style-dist.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style.css" />
     <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon">
     <style>
         section {
