--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
             <div id="juvenile-content-container">
 
                 <div id="avoiding-detention">
-                    <a href="./juvenile-justice.html" target="_blank">
+                    <a href="./juvenile-justice.html" target="_Blank">
                         <div class="hover-box">
                             <img src="./resources/media/images/child-behind-bars-with-background-removed.png" alt="A child peers through bars" />
                         </div>
@@ -653,7 +653,7 @@
                                 criminal justice system. I have observed that there
                                 are some very simple ways in which parents can keep
                                 their children from getting into trouble with the law:
-                                <a href="./juvenile-justice.html" target="_Blank">(read more)</a>
+                                <a href="./college-readiness.html" target="_Blank">(read more)</a>
                             </p>
                         </div>
                     </div>
