I changed the image used in the "Mental Health Moment" page.

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                 <div style="display: flex; flex-wrap: wrap; justify-content: space-around; margin: 0 auto;">
                     <div class="audio-container">
                         <h3>Lorem ipsum dolor sit amet</h3>
-                        <img src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg" alt="Dr. Adrienne Davis"
+                        <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
 
                         <p>
@@ -531,9 +531,9 @@
 
                     <div class="audio-container">
                         <h3>Lorem ipsum dolor sit amet</h3>
-                        <img src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg" alt="Dr. Adrienne Davis"
-                            style="width: 150px; height: auto;">
 
+                        <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
+                            style="width: 150px; height: auto;">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
                             luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
@@ -548,9 +548,9 @@
 
                     <div class="audio-container">
                         <h3>Lorem ipsum dolor sit amet</h3>
-                        <img src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg" alt="Dr. Adrienne Davis"
-                            style="width: 150px; height: auto;">
 
+                        <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
+                            style="width: 150px; height: auto;">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
                             luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
@@ -565,9 +565,9 @@
 
                     <div class="audio-container">
                         <h3>Lorem ipsum dolor sit amet</h3>
-                        <img src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg" alt="Dr. Adrienne Davis"
-                            style="width: 150px; height: auto;">
 
+                        <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
+                            style="width: 150px; height: auto;">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
                             luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
@@ -582,9 +582,9 @@
 
                     <div class="audio-container">
                         <h3>Lorem ipsum dolor sit amet</h3>
-                        <img src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg" alt="Dr. Adrienne Davis"
-                            style="width: 150px; height: auto;">
 
+                        <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
+                            style="width: 150px; height: auto;">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
                             luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
@@ -599,9 +599,9 @@
 
                     <div class="audio-container">
                         <h3>Lorem ipsum dolor sit amet</h3>
-                        <img src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg" alt="Dr. Adrienne Davis"
-                            style="width: 150px; height: auto;">
 
+                        <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
+                            style="width: 150px; height: auto;">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
                             luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
@@ -641,7 +641,7 @@
                 <div id="avoiding-detention">
                     <a href="./juvenile-justice.html" target="_Blank">
                         <div class="hover-box">
-                            <img src="./resources/media/images/child-behind-bars-with-background-removed.png" alt="A child peers through bars" />
+                            <img src="./resources/media/images/peering-through-bars-with-background-removed.png" alt="A child peers through bars" />
                         </div>
                     </a>
                     <div class="text-container">
