--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             </header>
             <div class="biography-content">
                 <a href="./curriculum-vitae.html" target="_Blank">
-                    <div id="cv-button">
-                        <h3>Curriculum Vitae</h3>
+                    <div id="cv-button" style="text-align: center;">
+                        <h3>C<br>u<br>r<br>r<br>i<br>c<br>u<br>l<br>u<br>m<br><br>V<br>i<br>t<br>a<br>e</h3>
                     </div>
                 </a>
                 <p>
@@ -286,6 +286,7 @@
 
             <div id="specialized-content">
                 <div id="specialized-categories">
+
                     <div id="forensic">
                         <a href="./forensic-psychology.html" target="_blank">
                             <div class="hover-box">
@@ -295,12 +296,22 @@
                         <h3>Forensic Psychology</h3>
                         <div>
                             <p>
-                                Forensic Psychologists play an active role in the legal system, providing attorneys and
-                                judges with valuable information about the defendants who stand before them. Often
-                                times
-                                these individuals present a complex picture with respect to the psychological factors
-                                that
-                                contributed to their legal predicament...
+                                Forensic Psychologists play an active role in the legal system, providing attorneys
+                                and
+                                judges with
+                                valuable information about the defendants who stand before them. Often times these
+                                individuals presenta
+                                complex picture with respect to the psychological factors that contributed to their
+                                legal predicament.
+                                Despite attempts to ‘profile’ individuals who commit crimes, there is no single
+                                “type”
+                                of law violator.
+                                Sometimes the people we least expect to violate the law, do so with unusual
+                                expertise
+                                and cunning. For
+                                others, their behavior might seem more predictable if we examine the psychosocial
+                                factors that are
+                                often related to crime.
                                 <a href="./forensic-psychology.html" target="_Blank">(read more)</a>
                                 <br>
                             </p>
