Layout refinement and the new asset
Shuffled some things around and added a smaller version of the slideshow

--- a/presentations.html
+++ b/presentations.html
@@ -31,7 +31,7 @@
         <h2 style="display: none;">Presentations</h2>
         <div style="font-family: 'Comic Sans MS','Architects Daughter'; font-size: 1.25rem; color: #8C2633; align-items: center; margin-top: 100px;">
             <img src="./resources/media/images/at-the-lectern.png" alt="A woman standing behind a podium" style="width: 300px;display: block; margin-left: auto; margin-right: auto;" />
-            <p style="font-size: 1.25rem;text-indent: 3rem;">
+            <p style="font-size: 1.25rem;text-indent: 3rem; text-align: justify;">
                 Mental Health is an important area of our lives,
                 just as important as our physical and spiritual
                 health. Our mental health or lack there of is
