Added a visit counter

--- a/index.html
+++ b/index.html
@@ -875,8 +875,15 @@
             </div>
         </section>
 
-        <div id="calendar-clock" class="clock-container block-container">
-            <h2 id="date_time">Clock</h2>
+
+        <div id="calendar-clock" class="clock-container flex-container" style="justify-content: space-between;">
+            <h2 id="date_time" style="float: left; margin-left: 2rem;">Clock</h2>
+            <!-- Start of CuterCounter Code -->
+            <div style="display: flex; margin-right: 2rem;">
+                <h2 style="margin-right: 1rem;">Visits: </h2>
+                <img src="http://www.cutercounter.com/hit.php?id=gmaaxfd&nd=6&style=26" border="0" alt="visitor counter">
+            </div>
+            <!-- End of CuterCounter Code -->
         </div>
     </div>
 
