Backing out a change to the visit counter

--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
             <!-- Start of CuterCounter Code -->
             <div style="display: flex; margin-right: 2rem;">
                 <h2 style="margin-right: 1rem;">Visits: </h2>
-                <img src="https://www.cutercounter.com/hit.php?id=gmaaxfd&nd=6&style=26" border="0" alt="visitor counter">
+                <img src="http://www.cutercounter.com/hit.php?id=gmaaxfd&nd=6&style=26" border="0" alt="visitor counter">
             </div>
             <!-- End of CuterCounter Code -->
         </div>
