More refinements to the footer

--- a/index.html
+++ b/index.html
@@ -877,7 +877,8 @@
 
 
         <div id="calendar-clock" class="clock-container flex-container" style="justify-content: space-between;">
-            <h2 id="date_time" style="float: left; margin-left: 2rem;">Clock</h2>
+            <h2 style="font-size: 1.25rem; line-height: 2rem; margin-left: 2rem;">&copy; 2018 Edgar M Cole, Jr.</h2>
+            <h2 id="date_time" style="float: left;">Clock</h2>
             <!-- Start of CuterCounter Code -->
             <div style="display: flex; margin-right: 2rem;">
                 <h2 style="margin-right: 1rem;">Visits: </h2>
