--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="biography-content">
                 <a href="./curriculum-vitae.html" target="_Blank">
                     <div id="cv-button" style="text-align: center;">
-                        <h3>C<br>u<br>r<br>r<br>i<br>c<br>u<br>l<br>u<br>m<br><br>V<br>i<br>t<br>a<br>e</h3>
+                        <h3>Curriculum Vitae</h3>
                     </div>
                 </a>
                 <p>
@@ -878,13 +878,13 @@
 
         <div id="calendar-clock" class="clock-container flex-container" style="justify-content: space-between;">
             <h2 style="font-size: 1.25rem; line-height: 2rem; margin-left: 2rem;">&copy; 2018 Edgar M Cole, Jr.</h2>
-            <h2 id="date_time" style="float: left;">Clock</h2>
-            <!-- Start of CuterCounter Code -->
+            <h2 id="date_time" style="margin-right: 2rem;">Clock</h2>
+            <!-- Start of CuterCounter Code 
             <div style="display: flex; margin-right: 2rem;">
                 <h2 style="margin-right: 1rem;">Visits: </h2>
                 <img src="http://www.cutercounter.com/hit.php?id=gmaaxfd&nd=6&style=26" border="0" alt="visitor counter">
             </div>
-            <!-- End of CuterCounter Code -->
+            End of CuterCounter Code -->
         </div>
     </div>
 
