--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
             <h2 id="date_time" style="margin-right: 2rem;">Clock</h2>
             <!--Start of CuterCounter Code -->
             <div style="display: flex; margin-right: 2rem;">
-                <h2 style="margin-right: 1rem;">Visits: </h2>
+                <h2 style="margin-right: 1rem;">Visitors: </h2>
                 <img src="http://www.cutercounter.com/hit.php?id=gmaaxfd&nd=6&style=26" border="0" alt="Visitor Counter">
             </div>
             <!--End of CuterCounter Code-->
