More updates to the Mental Health Moment page

--- a/index.html
+++ b/index.html
@@ -508,24 +508,21 @@
                     </div>
                 </div>
             </header>
-            <div style="display: flex; flex-direction: column; justify-content: center; width: 100%; margin-top: 155px; padding: 4rem;">
-                <h3 style="color: black; font-size: 2rem; text-align: center;">Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit.</h3>
-                <p style="color: black; text-align: justify;">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse suscipit odio suscipit libero
-                    faucibus rhoncus. Aenean arcu ex, maximus ac mollis at, finibus sit amet lectus. Aenean urna
-                    sapien, tempor non consequat vel, imperdiet vitae nisi. Integer nisl nisl, dignissim non libero
-                    non, faucibus porttitor urna. Etiam aliquam leo eget orci tempus, sed malesuada arcu vestibulum.
-                    Donec egestas malesuada nulla. Vivamus sapien risus, dignissim consequat eleifend nec, pharetra et
-                    tellus. Curabitur sit amet libero metus. Phasellus vitae massa at turpis aliquam porta feugiat et
-                    risus. Aliquam maximus eu erat nec convallis. Nulla eleifend lacinia augue ut maximus. Cras tellus
-                    nisi, scelerisque vel semper non, blandit vel arcu. Vivamus semper cursus elit, vestibulum euismod
-                    felis tincidunt nec. Quisque congue odio sed mauris dictum bibendum.
+            <div class="content-container">
+                <h3>“Your 15-Minute Mental Health Moment”</h3>
+                <p>
+                    In November of 2017, Dr. Davis began a weekly radio program on which she discusses a variety of
+                    topics related to understanding and maintaining your mental or psychological health. Her program
+                    was broadcast on WKZK Radio in Augusta every Saturday morning. Professional obligations required
+                    that she suspend her broadcast during the summer but she intends to resume it in January of 2019.
+                    You can listen to some of her broadcasts below. If you have any suggestions about other topics you
+                    would like her to hear her discuss, please email her at
+                    <a href="mailto:dradriennedavis@gmail.com">dradriennedavis@gmail.com</a>
                 </p>
 
                 <div style="display: flex; flex-wrap: wrap; justify-content: space-around; margin: 0 auto;">
                     <div class="audio-container">
-                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <h3>Understanding Mental Health & Mental Illness</h3>
                         <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
 
@@ -535,14 +532,14 @@
                         </p>
 
                         <audio controls style="width: 100%;">
-                            <source src="./resources/media/audio/15-minute-mental-health-moment-June-16-2018.mp3" type="audio/mpeg">
+                            <source src="./resources/media/audio/understanding-mental-health-and-mental-illness.mp3" type="audio/mpeg">
                             Your browser does not support
                             the audio element.
                         </audio>
                     </div>
 
                     <div class="audio-container">
-                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <h3>Myths & Fallacies About Psychotherapy</h3>
 
                         <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
@@ -552,14 +549,14 @@
                         </p>
 
                         <audio controls style="width: 100%;">
-                            <source src="./resources/media/audio/15-minute-mental-health-moment-June-16-2018.mp3" type="audio/mpeg">
+                            <source src="./resources/media/audio/myths-and-fallacies-about-psychotherapy.mp3" type="audio/mpeg">
                             Your browser does not support
                             the audio element.
                         </audio>
                     </div>
 
                     <div class="audio-container">
-                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <h3>Coping with Adversity<br><br></h3>
 
                         <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
@@ -569,14 +566,14 @@
                         </p>
 
                         <audio controls style="width: 100%;">
-                            <source src="./resources/media/audio/15-minute-mental-health-moment-June-16-2018.mp3" type="audio/mpeg">
+                            <source src="./resources/media/audio/coping-with-adversity.mp3" type="audio/mpeg">
                             Your browser does not support
                             the audio element.
                         </audio>
                     </div>
 
                     <div class="audio-container">
-                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <h3>Maintaining a Spirit of Thanks<br><br></h3>
 
                         <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
@@ -586,14 +583,14 @@
                         </p>
 
                         <audio controls style="width: 100%;">
-                            <source src="./resources/media/audio/15-minute-mental-health-moment-June-16-2018.mp3" type="audio/mpeg">
+                            <source src="./resources/media/audio/maintaining-a-spirit-of-thanks.mp3" type="audio/mpeg">
                             Your browser does not support
                             the audio element.
                         </audio>
                     </div>
 
                     <div class="audio-container">
-                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <h3>Family Dynamics during the Holiday Season</h3>
 
                         <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
@@ -603,14 +600,14 @@
                         </p>
 
                         <audio controls style="width: 100%;">
-                            <source src="./resources/media/audio/15-minute-mental-health-moment-June-16-2018.mp3" type="audio/mpeg">
+                            <source src="./resources/media/audio/family-dynamics-during-the-holiday-season.mp3" type="audio/mpeg">
                             Your browser does not support
                             the audio element.
                         </audio>
                     </div>
 
                     <div class="audio-container">
-                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <h3>Forgiveness – Letting Go of Grudges</h3>
 
                         <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
@@ -877,7 +874,7 @@
 
 
         <div id="calendar-clock" class="clock-container flex-container" style="justify-content: space-between; align-items: center;">
-            <h2 id="copyright-notice">&copy; 2018 Edgar M Cole, Jr.</h2>
+            <a href="mailto:edgar.cole@san.rr.com"><h2 id="copyright-notice">&copy; 2018 Edgar M Cole, Jr.</h2></a>
             <h2 id="date_time" style="margin-right: 2rem;">Clock</h2>
             <!--Start of CuterCounter Code -->
             <div style="display: flex; margin-right: 2rem;">
