Too many changes to mention

--- a/index.html
+++ b/index.html
@@ -291,7 +291,8 @@
                     <div id="forensic">
                         <a href="./forensic-psychology.html" target="_blank">
                             <div class="hover-box">
-                                <img src="./resources/media/images/scales-of-justice-with-background-removed.png" alt="The scales of justice" />
+                                <img src="./resources/media/images/scales-of-justice-with-background-removed.png" alt="The scales of justice"
+                                    style="filter:drop-shadow(4px 4px 4px Black)" />
                             </div>
                         </a>
                         <h3>Forensic Psychology</h3>
@@ -324,7 +325,7 @@
                         <h3>Presentations</h3>
                         <a href="./presentations.html" target="_Blank">
                             <div class="hover-box">
-                                <img src="./resources/media/images/at-the-lectern.png" alt="At the lectern" />
+                                <img src="./resources/media/images/at-the-lectern.png" alt="At the lectern" style="filter:drop-shadow(4px 4px 4px Black)" />
                             </div>
                         </a>
                         <div style="Width: 100%;">
@@ -366,7 +367,7 @@
                         <a href="./solution-focused-counseling.html" target="_Blank">
                             <div class="hover-box">
                                 <img src="./resources/media/images/inquisitive-silhouette-with-background-removed.png"
-                                    alt="An inquisitive person" />
+                                    alt="An inquisitive person" style="filter:drop-shadow(4px 4px 4px Black)" />
                             </div>
                         </a>
                     </div>
@@ -523,16 +524,17 @@
                 <div style="display: flex; flex-wrap: wrap; justify-content: space-around; margin: 0 auto;">
                     <div class="audio-container">
                         <h3>Understanding Mental Health & Mental Illness</h3>
-                        <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
-
+                        <!--
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
                             luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
                         </p>
-
+                        -->
                         <audio controls style="width: 100%;">
-                            <source src="./resources/media/audio/understanding-mental-health-and-mental-illness.mp3" type="audio/mpeg">
+                            <source src="./resources/media/audio/understanding-mental-health-and-mental-illness.mp3"
+                                type="audio/mpeg">
                             Your browser does not support
                             the audio element.
                         </audio>
@@ -541,13 +543,14 @@
                     <div class="audio-container">
                         <h3>Myths & Fallacies About Psychotherapy</h3>
 
-                        <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
+                        <!--
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
                             luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
                         </p>
-
+                        -->
                         <audio controls style="width: 100%;">
                             <source src="./resources/media/audio/myths-and-fallacies-about-psychotherapy.mp3" type="audio/mpeg">
                             Your browser does not support
@@ -558,13 +561,14 @@
                     <div class="audio-container">
                         <h3>Coping with Adversity<br><br></h3>
 
-                        <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
+                        <!--
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
                             luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
                         </p>
-
+                        -->
                         <audio controls style="width: 100%;">
                             <source src="./resources/media/audio/coping-with-adversity.mp3" type="audio/mpeg">
                             Your browser does not support
@@ -575,13 +579,14 @@
                     <div class="audio-container">
                         <h3>Maintaining a Spirit of Thanks<br><br></h3>
 
-                        <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
+                        <!--
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
                             luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
                         </p>
-
+                        -->
                         <audio controls style="width: 100%;">
                             <source src="./resources/media/audio/maintaining-a-spirit-of-thanks.mp3" type="audio/mpeg">
                             Your browser does not support
@@ -592,13 +597,14 @@
                     <div class="audio-container">
                         <h3>Family Dynamics during the Holiday Season</h3>
 
-                        <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
+                        <!--
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
                             luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
                         </p>
-
+                        -->
                         <audio controls style="width: 100%;">
                             <source src="./resources/media/audio/family-dynamics-during-the-holiday-season.mp3" type="audio/mpeg">
                             Your browser does not support
@@ -609,13 +615,14 @@
                     <div class="audio-container">
                         <h3>Forgiveness – Letting Go of Grudges</h3>
 
-                        <img src="./resources/media/images/microphone-2-with-background-removed.png" alt="A microphone"
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
                             style="width: 150px; height: auto;">
+                        <!--
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
                             luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
                         </p>
-
+                        -->
                         <audio controls style="width: 100%;">
                             <source src="./resources/media/audio/15-minute-mental-health-moment-June-16-2018.mp3" type="audio/mpeg">
                             Your browser does not support
@@ -650,7 +657,8 @@
                 <div id="avoiding-detention">
                     <a href="./juvenile-justice.html" target="_Blank">
                         <div class="hover-box">
-                            <img src="./resources/media/images/peering-through-bars-with-background-removed.png" alt="A child peers through bars" />
+                            <img src="./resources/media/images/peering-through-bars-with-background-removed.png" alt="A child peers through bars"
+                                style="filter:drop-shadow(4px 4px 4px Black)" />
                         </div>
                     </a>
                     <div class="text-container">
@@ -671,7 +679,8 @@
                 <div id="preparing-for-college">
                     <a href="./college-readiness.html" target="_blank">
                         <div class="hover-box">
-                            <img src="./resources/media/images/the-graduate-with-background-removed.png" alt="An exuberant graduate in cap and gown" />
+                            <img src="./resources/media/images/the-graduate-with-background-removed.png" alt="An exuberant graduate in cap and gown"
+                                style="filter:drop-shadow(4px 4px 4px Black)" />
                         </div>
                     </a>
                     <div class="text-container" style="width: 100%;">
@@ -873,16 +882,16 @@
         </section>
 
 
-        <div id="calendar-clock" class="clock-container flex-container" style="justify-content: space-between; align-items: center;">
-            <a href="mailto:edgar.cole@san.rr.com"><h2 id="copyright-notice">&copy; 2018 Edgar M Cole, Jr.</h2></a>
+        <footer id="calendar-clock" class="clock-container flex-container" style="justify-content: space-between; align-items: center;">
+            <a href="mailto:edgar.cole@san.rr.com"><h2>&copy; 2018 Edgar M Cole, Jr.</h2></a>
             <h2 id="date_time" style="margin-right: 2rem;">Clock</h2>
             <!--Start of CuterCounter Code -->
             <div style="display: flex; margin-right: 2rem;">
-                <h2 style="margin-right: 1rem;">Visitors: </h2>
-                <img src="http://www.cutercounter.com/hit.php?id=gmaaxfd&nd=6&style=26" border="0" alt="Visitor Counter">
+                <h2>Visitors:</h2>
+                <img src="http://www.cutercounter.com/hit.php?id=gmaaxfd&nd=6&style=26" alt="Visitor Counter">
             </div>
             <!--End of CuterCounter Code-->
-        </div>
+        </footer>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
