--- a/index - Copy.html
+++ b/index - Copy.html
@@ -27,7 +27,7 @@
                     Services</button>
                 <button class="tablink" onclick="openPage('YourMentalHealth', this, 'White', '#8c2633')">Your Mental
                     Health</button>
-                
+                <button class="tablink" onclick="openPage('RadioShow', this, 'White', '#8c2633')">Mental Health Moment</button>
                 <button class="tablink" onclick="openPage('YouthMentalHealth', this, 'White', '#8c2633')">Youth Mental
                     Health</button>
                 <button class="tablink" onclick="openPage('Testimonials', this, 'White', '#8c2633')">Client
@@ -490,6 +490,149 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section id="RadioShow" class="tabcontent flex-container" style="position: relative;">
+
+            <header class="small-header block-container">
+                <div class="outer" style="background-color: #8C2633;">
+                    <div class="middle">
+                        <div class="inner" style="background-color: #8C2633;">
+                            <div>
+                                <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
+                                <!--
+                                <img class="secondary-photo" src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
+                                    alt="Dr. Adrienne Davis" />
+                                    -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <div class="content-container">
+                <h3>“Your 15-Minute Mental Health Moment”</h3>
+                <p>
+                    In November of 2017, Dr. Davis began a weekly radio program on which she discusses a variety of
+                    topics related to understanding and maintaining your mental or psychological health. Her program
+                    was broadcast on WKZK Radio in Augusta every Saturday morning. Professional obligations required
+                    that she suspend her broadcast during the summer but she intends to resume it in January of 2019.
+                    You can listen to some of her broadcasts below. If you have any suggestions about other topics you
+                    would like her to hear her discuss, please email her at
+                    <a href="mailto:dradriennedavis@gmail.com">dradriennedavis@gmail.com</a>
+                </p>
+
+                <div style="display: flex; flex-wrap: wrap; justify-content: space-around; margin: 0 auto;">
+                    <div class="audio-container">
+                        <h3>Understanding Mental Health & Mental Illness</h3>
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
+                            style="width: 150px; height: auto;">
+                        <!--
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
+                            luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
+                        </p>
+                        -->
+                        <audio controls style="width: 100%;">
+                            <source src="./resources/media/audio/first-15-minute-mental-health-moment.mp3"
+                                type="audio/mpeg">
+                            Your browser does not support
+                            the audio element.
+                        </audio>
+                    </div>
+
+
+                    <div class="audio-container">
+                        <h3>Myths & Fallacies About Psychotherapy</h3>
+
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
+                            style="width: 150px; height: auto;">
+                        <!--
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
+                            luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
+                        </p>
+                        -->
+                        <audio controls style="width: 100%;">
+                            <source src="./resources/media/audio/myths-and-fallacies-about-psychotherapy.mp3" type="audio/mpeg">
+                            Your browser does not support
+                            the audio element.
+                        </audio>
+                    </div>
+
+                    <div class="audio-container">
+                        <h3>Coping with Adversity<br><br></h3>
+
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
+                            style="width: 150px; height: auto;">
+                        <!--
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
+                            luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
+                        </p>
+                        -->
+                        <audio controls style="width: 100%;">
+                            <source src="./resources/media/audio/coping-with-adversity.mp3" type="audio/mpeg">
+                            Your browser does not support
+                            the audio element.
+                        </audio>
+                    </div>
+
+                    <div class="audio-container">
+                        <h3>Maintaining a Spirit of Thanks<br><br></h3>
+
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
+                            style="width: 150px; height: auto;">
+                        <!--
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
+                            luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
+                        </p>
+                        -->
+                        <audio controls style="width: 100%;">
+                            <source src="./resources/media/audio/maintaining-a-spirit-of-thanks.mp3" type="audio/mpeg">
+                            Your browser does not support
+                            the audio element.
+                        </audio>
+                    </div>
+
+                    <div class="audio-container">
+                        <h3>Family Dynamics during the Holiday Season</h3>
+
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
+                            style="width: 150px; height: auto;">
+                        <!--
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
+                            luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
+                        </p>
+                        -->
+                        <audio controls style="width: 100%;">
+                            <source src="./resources/media/audio/family-dynamics-during-the-holiday-season.mp3" type="audio/mpeg">
+                            Your browser does not support
+                            the audio element.
+                        </audio>
+                    </div>
+
+                    <div class="audio-container">
+                        <h3>Forgiveness – Letting Go of Grudges</h3>
+
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
+                            style="width: 150px; height: auto;">
+                        <!--
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
+                            luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
+                        </p>
+                        -->
+                        <audio controls style="width: 100%;">
+                            <source src="./resources/media/audio/15-minute-mental-health-moment-June-16-2018.mp3" type="audio/mpeg">
+                            Your browser does not support
+                            the audio element.
+                        </audio>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         <section id="YouthMentalHealth" class="tabcontent">
