--- a/index - Copy.html
+++ b/index - Copy.html
@@ -517,7 +517,7 @@
                     was broadcast on WKZK Radio in Augusta every Saturday morning. Professional obligations required
                     that she suspend her broadcast during the summer but she intends to resume it in January of 2019.
                     You can listen to some of her broadcasts below. If you have any suggestions about other topics you
-                    would like her to hear her discuss, please email her at
+                    would like to hear her discuss, please email her at
                     <a href="mailto:dradriennedavis@gmail.com">dradriennedavis@gmail.com</a>
                 </p>
 
@@ -885,7 +885,7 @@
 
         <footer id="calendar-clock" class="clock-container flex-container" style="justify-content: space-between; align-items: center;">
             <a href="mailto:edgar.cole@san.rr.com"><h2>&copy; 2018 Edgar M Cole, Jr.</h2></a>
-            <h2 id="date_time" style="margin-right: 2rem;">Clock</h2>
+            <h2 id="date_time">Clock</h2>
             <!--Start of CuterCounter Code -->
             <div style="display: flex; margin-right: 2rem;">
                 <h2>Visitors:</h2>
